--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-kakao": "^1.0.1",
     "prettier": "^2.6.2",
     "socket.io": "^4.5.0",
