--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           script: |
             cd /home/ubuntu/seuchida_BE
             # git config --global --add safe.directory /home/ubuntu/seuchida_BE
-            sudo git pull
+            sudo git pull origin master
             # sudo npm update
             sudo npm install
             sudo pm2 reload all
