--- a/.github/workflows/deploy_2.yml
+++ b/.github/workflows/deploy_2.yml
@@ -1,30 +1,30 @@
-name: CI-CD
+name: CI-CD2
 
 on:
-  push:
-    branches:
-      - master
-      
-  pull_request:
-    branches:
-      - master
-      
+    push:
+        branches:
+            - master
+
+    pull_request:
+        branches:
+            - master
+
 jobs:
-  build:
-    runs-on: ubuntu-18.04
-    
-    steps:
-      - name: Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.REMOTE_IP_2 }}
-          username: ${{ secrets.REMOTE_SSH_ID }}
-          key: ${{ secrets.REMOTE_SSH_KEY }}
-          port: ${{ secrets.REMOTE_SSH_PORT }}
-          script: |
-            cd /home/ubuntu/seuchida_BE
-            # git config --global --add safe.directory /home/ubuntu/seuchida_BE
-            sudo git pull origin master
-            # sudo npm update
-            sudo npm install
-            sudo pm2 reload all
+    build:
+        runs-on: ubuntu-18.04
+
+        steps:
+            - name: Deploy
+              uses: appleboy/ssh-action@master
+              with:
+                  host: ${{ secrets.REMOTE_IP_2 }}
+                  username: ${{ secrets.REMOTE_SSH_ID }}
+                  key: ${{ secrets.REMOTE_SSH_KEY }}
+                  port: ${{ secrets.REMOTE_SSH_PORT }}
+                  script: |
+                      cd /home/ubuntu/seuchida_BE
+                      # git config --global --add safe.directory /home/ubuntu/seuchida_BE
+                      sudo git pull origin master
+                      # sudo npm update
+                      sudo npm install
+                      sudo pm2 reload all
