--- a/.github/workflows/deploy_1.yml
+++ b/.github/workflows/deploy_1.yml
@@ -3,11 +3,11 @@ name: CI-CD1
 on:
     push:
         branches:
-            - master
+            - main
 
     pull_request:
         branches:
-            - master
+            - main
 
 jobs:
     build:
