--- a/.github/workflows/deploy_2.yml
+++ b/.github/workflows/deploy_2.yml
@@ -3,11 +3,11 @@ name: CI-CD2
 on:
     push:
         branches:
-            - master
+            - main
 
     pull_request:
         branches:
-            - master
+            - main
 
 jobs:
     build:
